# plantie

./: .clang-format  .gitignore  CMakeLists.txt
config/cmake/: avr_commands.cmake
plantie_avr/: CMakeLists.txt
plantie_avr/include/: plantie_io.h
plantie_avr/include/common/: esp_mqtt_state_handler.h  plantie_app.h  plantie_globals.h  plantie_util.h  ring_buffer.h
plantie_avr/include/driver/: adc.h  timer.h  usart.h
plantie_avr/src/: main.c  plantie_io.c
plantie_avr/src/common/: esp_mqtt_state_handler.c  plantie_app.c  plantie_globals.c  plantie_util.c  ring_buffer.c
plantie_avr/src/driver/: adc.c  timer.c  usart.c
